<resources>
    <string name="app_name" translatable="false">BactMan Adventures</string>
    <string name="app_name_short" translatable="false">BactMan</string>
    <string name="action_quit">Quit</string>
    <string name="action_reset">Reset</string>
    <string name="lorem" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet
        ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor.
        Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem
        lacinia consectetur.\n
        \nDonec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id
        dolor. Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra
        tincidunt feugiat nisl imperdiet.\n
        \nUt convallis libero in urna ultrices accumsan. Donec sed odio eros. Donec
        viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient
        montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in
        est.
    </string>
    <string name="label_home_game">The Game</string>
    <string name="label_home_credits">Credits</string>
    <string name="label_home_team">Us</string>
    <string name="label_home_iGEM">The iGEM</string>
    <string name="title_activity_game_menu">The Game</string>
    <string name="label_game_new">Play</string>
    <string name="label_game_levels">Level select</string>
    <string name="label_game_glossary">Glossary</string>
    <string name="title_activity_us">Us</string>
    <string name="us_title">Our team</string>
    <string name="us_subtitle">Everything about us</string>
    <string name="label_us_presentation">Our project</string>
    <string name="label_us_team">Our team</string>
    <string name="label_us_sponsors">Our sponsors</string>
    <string name="label_us_contact">Contact us</string>
    <string name="title_activity_igem" translatable="false">iGEM</string>
    <string name="igem_title">The iGEM</string>
    <string name="igem_subtitle" translatable="false">International Genetically Engineered Machine</string>
    <string name="label_igem_what">Presentation</string>
    <string name="label_igem_biology">Synthetic Biology</string>
    <string name="label_igem_biobricks">The BioBricks</string>
    <string name="label_igem_partners">Our Partners</string>
    <string name="text_igem">
        iGEM is the biggest international competition of Synthetic Biology, and aims to connect education and
        competition to advance research in this area.
        Organised by the MIT since 2004, students from the whole world compete by creating innovative projects
        in the field of Synthetic Biology.\n
        \nAt the beginning of summer, the teams receive a kit of biologic parts and work in the laboratory to design
        synthetic genetical circuits that must function in living cells. Collaboration and exchange between teams
        is highly valued, in this perspective of advancing Synthetic Biology.
    </string>
    <string name="title_activity_credits">Credits</string>
    <string name="credits_title">Credits, Licences and Thanks</string>
    <string name="credits_subtitle">They made it real</string>
    <string name="text_credits_people">
        Game Development:
        \nPaul-Louis Nech
        \n
        \n
        \nApplication layouts:
        \nPaul-Louis Nech
        \nGoulwen Mintec
        \nLionel Chesnais
        \n
        \n
        \nGraphical design:
        \nLionel Chesnais
        \nMarine Mohmmed
        \nCyrielle Viaut
        \nPascal Charleton
        \n
        \n
        \nTexts and concepts:
        \nJohanna Chesnel
        \nHugo Cremaschi
        \nMatthieu Da Costa
        \nGilles Defrel
        \nArmelle Louisy
        \nMarine Mohmmed
        \nPaul-Louis Nech
        \nPauline Trébulle
        \nMarwa Zerhouni
        \n
        \n
        \nMusic and sounds:
        \nScott Gratton - Electro Lab
        \nplasterbrain - Coin GET!
        \nkantouth - CARTOON-BING-LOW
        \n
        \nMany thanks to the help provided by our instructor Samuel Juillot
        \nand by our advisors Guillaume Mercy and Pierre Parutto
        \n
        \n
        \n
        \nSpecial thanks to our KickStarter backers, and particularly to:
        \n
        \nBendali-amor Samia
        \nChesnel Anthony et Véronique
        \nCornille Catherine
        \nCornille Pierre-Jean
        \nCremaschi Laurent
        \nDa Costa José
        \nDigan William
        \nJanny Sirwan
        \nLouisy Patrick
        \nLouisy Valérie
        \nSophie Poignon
        \n
        \n
        \n
    </string>
    <string name="text_credits_andengine">
        Games build with the
        <a href="#">AndEngine Game Engine</a>
        \n
    </string>
    <string name="text_credits_butterknife">
        Better interface interaction thanks to the
        <a href="#">ButterKnife</a>
        library
        \n
    </string>
    <string name="text_credits_background">
        Background task handling thanks to
        <a href="#">Steve Liles\' ForeDroid</a>
        library, using
        <a href="#">Benoit Lubek\' android-activitylifecyclecallbacks-compat</a>
        \n
    </string>
    <string name="text_credits_carousel">
        Sponsors and Team pages build with
        <a href="#">ludovicroland\'s Android Carousel</a>
        library, based on
        <a href="#">Igor Kushnarev\'s work</a>
        \n
    </string>
    <string name="text_credits_icons">
        Icons on contact page come from
        <a href="#">Dan Leech\'s SimpleIcons</a>
        \n
    </string>
    <string name="title_activity_presentation">Our project</string>
    <string name="team_title">Who are we ?</string>
    <string name="team_subtitle">A mixed team to get the best of us</string>
    <string name="sponsors_title">Our sponsors</string>
    <string name="sponsors_subtitle">Who\'s backing us?</string>
    <string name="sponsors_separation_line">They give us a lot to build our project</string>
    <string name="contact_us_title">How to contact us ?</string>
    <string name="contact_us_subtitle">We want to hear from you</string>
    <string name="title_activity_what">What is the iGEM?</string>
    <string name="what_subtitle">A competition to celebrate science and knowledge</string>
    <string name="title_activity_bio">Synthetic Biology</string>
    <string name="bio_subtitle">Design and construction of biological systems</string>
    <string name="title_activity_biobrick">What is a BioBrick ?</string>
    <string name="biobrick_subtitle">A good way to work together</string>
    <string name="title_activity_partners">Who follows the iGEM ?</string>
    <string name="game_subtitle">BactMan needs your help</string>
    <string name="label_levels_gut">The Gut Run</string>
    <string name="label_levels_bin">The Lab Sorter</string>
    <string name="label_levels_picto">The Labo Memo</string>
    <string name="label_levels_piano">The PolyPiano</string>
    <string name="text_biobrick">
        The BioBricks are standardised pieces of DNA, developed to permit a faster building of biological systems.
        \n
        \nAs they are built on the same model, we can assemble them as a LEGO® game to finally incorporate them
        in a living cell.
    </string>
</resources>