<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context="fr.plnech.igem.ui.GameLevelsActivity"
                style="@style/AppTheme.Layout">
    <ImageView style="@style/AppTheme.ImageView.Background.Menus"/>
    <LinearLayout style="@style/AppTheme.Layout.Menu">
        <RelativeLayout style="@style/AppTheme.Container.Title.Menu">
            <TextView style="@style/AppTheme.TextView.Title"
                      android:text="@string/label_game_levels"
                      android:id="@+id/levels_title"/>
            <TextView style="@style/AppTheme.TextView.Subtitle"
                      android:text="@string/game_subtitle"
                      android:id="@+id/menu_subtitle"
                      android:layout_below="@+id/levels_title"/>
        </RelativeLayout>
        <RelativeLayout style="@style/AppTheme.Container.Button">
            <Button style="@style/AppTheme.Button"
                    android:text="@string/label_levels_gut"
                    android:id="@+id/button_levels_gut"/>
        </RelativeLayout>
        <RelativeLayout style="@style/AppTheme.Container.Button">
            <Button style="@style/AppTheme.Button"
                    android:text="@string/label_levels_bin"
                    android:id="@+id/button_levels_bin"
                    android:enabled="false"/>
        </RelativeLayout>
        <RelativeLayout style="@style/AppTheme.Container.Button">
            <Button style="@style/AppTheme.Button"
                    android:text="@string/label_levels_picto"
                    android:id="@+id/button_levels_picto"
                    android:enabled="false"/>
        </RelativeLayout>
        <RelativeLayout style="@style/AppTheme.Container.Button">
            <Button style="@style/AppTheme.Button"
                    android:text="@string/label_levels_piano"
                    android:id="@+id/button_levels_piano"
                    android:enabled="false"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
