<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/AppTheme.ScrollView">

    <RelativeLayout style="@style/AppTheme.Activity.Detail"
                    tools:context="com.ionis.igem.app.SynBioActivity">

        <ImageView style="@style/AppTheme.ImageView.FullWidth"
                   android:id="@+id/mainPic"
                   android:src="@drawable/synbio"
                   android:contentDescription="@string/igem_title"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/box_title"
                android:layout_below="@id/mainPic">

            <TextView style="@style/AppTheme.TextView.Title"
                      android:text="@string/title_activity_bio"
                      android:id="@+id/bio_title"/>
            <TextView style="@style/AppTheme.TextView.Subtitle"
                      android:text="@string/bio_subtitle"
                      android:id="@+id/bio_subtitle"
                      android:layout_below="@id/bio_title"/>
        </RelativeLayout>

        <RelativeLayout style="@style/AppTheme.Container.Paragraphs"
                        android:layout_below="@id/box_title">
            <TextView style="@style/AppTheme.TextView.Paragraphs"
                      android:text="@string/lorem"
                      android:id="@+id/paragraphs"/>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>
