<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:background="@android:color/holo_green_dark"
              android:layout_alignParentTop="true"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"
              tools:context=".teamActivity"
              android:weightSum="100">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="24">

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content"
                  android:text="@string/igem_title"
                  android:id="@+id/team_title"
                  android:layout_alignParentTop="true"
                  android:layout_marginTop="20dp"
                  android:layout_centerHorizontal="true"
                  android:textSize="25sp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/igem_subtitle"
                  android:id="@+id/team_subtitle"
                  android:textStyle="italic"
                  android:textSize="15sp"
                  android:layout_centerHorizontal="true"
                  android:layout_below="@+id/team_title"/>

    </RelativeLayout>
    <RelativeLayout style="@style/AppTheme.ButtonContainer">
        <Button style="@style/AppTheme.Button"
                android:text="@string/label_igem_what"
                android:id="@+id/button_igem_what"/>
    </RelativeLayout>

    <RelativeLayout style="@style/AppTheme.ButtonContainer">
        <Button style="@style/AppTheme.Button"
                android:text="@string/label_igem_biology"
                android:id="@+id/button_igem_biology"/>
    </RelativeLayout>

    <RelativeLayout style="@style/AppTheme.ButtonContainer">
        <Button style="@style/AppTheme.Button"
                android:text="@string/label_igem_biobricks"
                android:id="@+id/button_igem_biobricks"/>
    </RelativeLayout>

    <RelativeLayout style="@style/AppTheme.ButtonContainer">
        <Button style="@style/AppTheme.Button"
                android:text="@string/label_igem_partners"
                android:id="@+id/button_igem_partners"/>
    </RelativeLayout>


</LinearLayout>
