<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/AppTheme.ScrollView">

    <RelativeLayout style="@style/AppTheme.Layout.Detail"
                    tools:context="com.ionis.igem.app.ui.WhatActivity">

        <ImageView style="@style/AppTheme.ImageView.FullWidth"
                   android:id="@+id/mainPic"
                   android:src="@drawable/igem"
                   android:contentDescription="@string/igem_title"/>

        <RelativeLayout style="@style/AppTheme.Container.Title"
                        android:id="@+id/box_title"
                        android:layout_below="@id/mainPic">

            <TextView style="@style/AppTheme.TextView.Title"
                      android:text="@string/team_title"
                      android:id="@+id/team_title"/>

            <TextView style="@style/AppTheme.TextView.Subtitle"
                      android:text="@string/team_subtitle"
                      android:id="@+id/team_subtitle"
                      android:layout_below="@id/team_title"/>
        </RelativeLayout>

        <ImageView style="@style/AppTheme.ImageView"
            android:id="@+id/firstImage"
            android:src="@drawable/avatar1"
            android:layout_below="@id/box_title"/>

        <ImageView style="@style/AppTheme.ImageView"
            android:id="@+id/secondImage"
            android:src="@drawable/avatar2"
            android:layout_below="@id/box_title"
            android:layout_toRightOf="@id/firstImage"/>


    </RelativeLayout>
</ScrollView>
